--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
     <head>
         <meta http-equiv="content-type" content="text/html; charset=iso-8859-1" />
-		<link rel="stylesheet" type="text/css" href="Space.css" />
+		<link rel="stylesheet" type="text/css" href="css/Space.css" />
 		<title>JavaScript Space System</title>
 
-        <script src="JS3.js" type="text/javascript"></script>
+        <script src="srcs/JS3.js" type="text/javascript"></script>
 		<script type="text/javascript">	    
 		    var center;
 			function init() {
@@ -52,10 +52,10 @@
 		</script>
 	</head>
 	<body onload="init()">
-        <img id="Sol" src="sol.png" style="width: 100px; height: 103px; border-width: 0px;" />
-		<img id="Terra" src="Terra.png" style="width:15px; height: 15px; border-width: 0px;" />
-		<img id="Lua" src="lua.jpg" style="width:8px; height: 8px; border-width: 0px;" />		
-		<img id="Marte" src="Marte.png" style="width:10px; height: 10px; border-width: 0px;" />
-		<img id="Jupiter" src="Jupiter.png" style="width:30px; height: 30px; border-width: 0px;" />
+        <img id="Sol" src="imgs/sol.png" style="width: 100px; height: 103px; border-width: 0px;" />
+		<img id="Terra" src="imgs/Terra.png" style="width:15px; height: 15px; border-width: 0px;" />
+		<img id="Lua" src="imgs/lua.jpg" style="width:8px; height: 8px; border-width: 0px;" />		
+		<img id="Marte" src="imgs/Marte.png" style="width:10px; height: 10px; border-width: 0px;" />
+		<img id="Jupiter" src="imgs/Jupiter.png" style="width:30px; height: 30px; border-width: 0px;" />
 	</body>
 </html>
