Melhorias nas images e css

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 	<body onload="init()">
         <img id="Sol" src="imgs/Sol.png" style="width: 100px; height: 103px; border-width: 0px;" />
 		<img id="Terra" src="imgs/Terra.png" style="width:15px; height: 15px; border-width: 0px;" />
-		<img id="Lua" src="imgs/Lua.jpg" style="width:8px; height: 8px; border-width: 0px;" />		
+		<img id="Lua" src="imgs/Lua.png" style="width:8px; height: 8px; border-width: 0px;" />		
 		<img id="Marte" src="imgs/Marte.png" style="width:13px; height: 13px; border-width: 0px;" />
 		<img id="Jupiter" src="imgs/Jupiter.png" style="width:30px; height: 30px; border-width: 0px;" />
 	</body>
